# rust-routines

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  fix_tests.py  test_output.txt
.cargo/: config.toml
benches/: channel_benchmark.rs  routine_benchmark.rs
doc/: Implementation-Plan.md  Integration-Status-Report.md  MVP.md  Phase-3-Complete.md  Phase2-Completion-Report.md  Phase2-Final-Report.md  Remote-Tokio.md  Remove-Tokio.md  Scheduler-Integration.md  Status-of-Implementation.md  Technical-Design.md  Update-Summary.md
examples/: basic_routines.rs  integrated_demo.rs  isolated_runtime_demo.rs  phase2_demo.rs  phase_b_basic_test.rs  phase_b_demo.rs
src/: bridge.rs  channel.rs  error.rs  executor.rs  io.rs  lib.rs  routine.rs  runtime.rs  runtime_v2.rs  select.rs  select_macro.rs  timer.rs
src/scheduler/: core.rs  core_v2.rs  mod.rs  queue.rs  scheduler.rs  steal.rs  worker.rs
tests/: demonstrate_problem.rs  integration_tests.rs  integration_tests_basic.rs  phase2_integration.rs  scheduler_test_basic.rs
tests/common/: mod.rs
