[package]
name = "rust-routines"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Dye <cargo.test.summary@gmail.com>"]
description = "Goroutines in Rust - Go-like concurrency primitives for Rust"
repository = "https://github.com/phdye/rust-routines"
license = "MIT OR Apache-2.0"
keywords = ["concurrency", "async", "goroutines", "channels", "threads"]
categories = ["concurrency", "asynchronous"]
readme = "README.md"

[lib]
name = "rust_routines"
path = "src/lib.rs"

[dependencies]
# tokio removed - using pure M:N scheduler
futures = "0.3"  # Still needed for oneshot channels and Pin/Future traits
crossbeam = "0.8"
parking_lot = "0.12"
thiserror = "1.0"
rand = "0.8"
num_cpus = "1.16"
once_cell = "1.19"
libc = "0.2"
log = "0.4"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "channel_benchmark"
harness = false

[[bench]]
name = "routine_benchmark"
harness = false

[features]
default = []
no-std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
